Added Capabilities from the Business Capability Map framework
